# sam-serverless-app-sample

./: README.md  template.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
